src/grammars/kite.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Program: peg$parseProgram },
      peg$startRuleFunction  = peg$parseProgram,

      peg$c0 = function(stmts) {
          const segments = {
              data: [
                  `.data 0x34000`
              ],
              code: [
                  `.code 0x01000`
              ]
          };
          return JSON.stringify(stmts.reduce((acc, cur) => {
              if (cur && cur.data) acc.data.push(...cur.data);
              if (cur && cur.code) acc.code.push(...cur.code);
              return acc;
          }, segments), null, 2);
        },
      peg$c1 = peg$otherExpectation("Comment"),
      peg$c2 = "#",
      peg$c3 = peg$literalExpectation("#", false),
      peg$c4 = peg$otherExpectation("Comma"),
      peg$c5 = ",",
      peg$c6 = peg$literalExpectation(",", false),
      peg$c7 = peg$otherExpectation("Colon"),
      peg$c8 = ":",
      peg$c9 = peg$literalExpectation(":", false),
      peg$c10 = peg$otherExpectation("Semicolon"),
      peg$c11 = ";",
      peg$c12 = peg$literalExpectation(";", false),
      peg$c13 = peg$otherExpectation("Double Quote"),
      peg$c14 = "\"",
      peg$c15 = peg$literalExpectation("\"", false),
      peg$c16 = peg$otherExpectation("Single Quote"),
      peg$c17 = "'",
      peg$c18 = peg$literalExpectation("'", false),
      peg$c19 = peg$otherExpectation("Left Parenthesis"),
      peg$c20 = "(",
      peg$c21 = peg$literalExpectation("(", false),
      peg$c22 = peg$otherExpectation("Right Parenthesis"),
      peg$c23 = ")",
      peg$c24 = peg$literalExpectation(")", false),
      peg$c25 = peg$otherExpectation("Left Bracket"),
      peg$c26 = "[",
      peg$c27 = peg$literalExpectation("[", false),
      peg$c28 = peg$otherExpectation("Right Bracket"),
      peg$c29 = "]",
      peg$c30 = peg$literalExpectation("]", false),
      peg$c31 = peg$otherExpectation("Left Brace"),
      peg$c32 = "{",
      peg$c33 = peg$literalExpectation("{", false),
      peg$c34 = peg$otherExpectation("Right Brace"),
      peg$c35 = "}",
      peg$c36 = peg$literalExpectation("}", false),
      peg$c37 = peg$otherExpectation("Memory Location"),
      peg$c38 = "@",
      peg$c39 = peg$literalExpectation("@", false),
      peg$c40 = peg$otherExpectation("Assignment Operator"),
      peg$c41 = "=",
      peg$c42 = peg$literalExpectation("=", false),
      peg$c43 = peg$otherExpectation("Addition Operator"),
      peg$c44 = "+",
      peg$c45 = peg$literalExpectation("+", false),
      peg$c46 = peg$otherExpectation("Subtraction Operator"),
      peg$c47 = "-",
      peg$c48 = peg$literalExpectation("-", false),
      peg$c49 = peg$otherExpectation("Multiplication Operator"),
      peg$c50 = "*",
      peg$c51 = peg$literalExpectation("*", false),
      peg$c52 = peg$otherExpectation("Division Operator"),
      peg$c53 = "/",
      peg$c54 = peg$literalExpectation("/", false),
      peg$c55 = peg$otherExpectation("Modulus Operator"),
      peg$c56 = "%",
      peg$c57 = peg$literalExpectation("%", false),
      peg$c58 = peg$otherExpectation("Not Operator"),
      peg$c59 = "not",
      peg$c60 = peg$literalExpectation("not", true),
      peg$c61 = peg$otherExpectation("Or Operator"),
      peg$c62 = "or",
      peg$c63 = peg$literalExpectation("or", true),
      peg$c64 = peg$otherExpectation("And Operator"),
      peg$c65 = "and",
      peg$c66 = peg$literalExpectation("and", true),
      peg$c67 = peg$otherExpectation("Exclusive Or Operator"),
      peg$c68 = "xor",
      peg$c69 = peg$literalExpectation("xor", true),
      peg$c70 = peg$otherExpectation("Shift Left Operator"),
      peg$c71 = "<<",
      peg$c72 = peg$literalExpectation("<<", false),
      peg$c73 = peg$otherExpectation("Shift Right Operator"),
      peg$c74 = ">>",
      peg$c75 = peg$literalExpectation(">>", false),
      peg$c76 = peg$otherExpectation("Equality Operator"),
      peg$c77 = peg$otherExpectation("Inequality Operator"),
      peg$c78 = "!=",
      peg$c79 = peg$literalExpectation("!=", false),
      peg$c80 = peg$otherExpectation("Less Than Operator"),
      peg$c81 = "<",
      peg$c82 = peg$literalExpectation("<", false),
      peg$c83 = peg$otherExpectation("Greater Than Operator"),
      peg$c84 = ">",
      peg$c85 = peg$literalExpectation(">", false),
      peg$c86 = peg$otherExpectation("Less Than or Equal Operator"),
      peg$c87 = "<=",
      peg$c88 = peg$literalExpectation("<=", false),
      peg$c89 = peg$otherExpectation("Greater Than or Equal Operator"),
      peg$c90 = ">=",
      peg$c91 = peg$literalExpectation(">=", false),
      peg$c92 = peg$otherExpectation("ASM Keyword"),
      peg$c93 = "asm",
      peg$c94 = peg$literalExpectation("asm", true),
      peg$c95 = peg$otherExpectation("BREAK keyword"),
      peg$c96 = "break",
      peg$c97 = peg$literalExpectation("break", true),
      peg$c98 = peg$otherExpectation("CONTINUE keyword"),
      peg$c99 = "continue",
      peg$c100 = peg$literalExpectation("continue", true),
      peg$c101 = peg$otherExpectation("ELSE Keyword"),
      peg$c102 = "else",
      peg$c103 = peg$literalExpectation("else", true),
      peg$c104 = peg$otherExpectation("FN Keyword"),
      peg$c105 = "fn",
      peg$c106 = peg$literalExpectation("fn", true),
      peg$c107 = peg$otherExpectation("FOR Keyword"),
      peg$c108 = "for",
      peg$c109 = peg$literalExpectation("for", true),
      peg$c110 = peg$otherExpectation("IF Keyword"),
      peg$c111 = "if",
      peg$c112 = peg$literalExpectation("if", true),
      peg$c113 = peg$otherExpectation("RETURN Keyword"),
      peg$c114 = "return",
      peg$c115 = peg$literalExpectation("return", true),
      peg$c116 = peg$otherExpectation("SYS Keyword"),
      peg$c117 = "sys",
      peg$c118 = peg$literalExpectation("sys", true),
      peg$c119 = peg$otherExpectation("THEN Keyword"),
      peg$c120 = "then",
      peg$c121 = peg$literalExpectation("then", true),
      peg$c122 = peg$otherExpectation("TO Keyword"),
      peg$c123 = "to",
      peg$c124 = peg$literalExpectation("to", true),
      peg$c125 = peg$otherExpectation("WHILE Keyword"),
      peg$c126 = "while",
      peg$c127 = peg$literalExpectation("while", true),
      peg$c128 = peg$otherExpectation("CONST Keyword"),
      peg$c129 = "const",
      peg$c130 = peg$literalExpectation("const", true),
      peg$c131 = peg$otherExpectation("PTR Keyword"),
      peg$c132 = "ptr",
      peg$c133 = peg$literalExpectation("ptr", true),
      peg$c134 = peg$otherExpectation("SIGNED Keyword"),
      peg$c135 = "signed",
      peg$c136 = peg$literalExpectation("signed", true),
      peg$c137 = peg$otherExpectation("BYTE Keyword"),
      peg$c138 = "byte",
      peg$c139 = peg$literalExpectation("byte", true),
      peg$c140 = function() { return U_BYTE; },
      peg$c141 = peg$otherExpectation("WORD Keyword"),
      peg$c142 = "word",
      peg$c143 = peg$literalExpectation("word", true),
      peg$c144 = function() { return U_WORD; },
      peg$c145 = peg$otherExpectation("SIGNED BYTE Keyword"),
      peg$c146 = function() { return S_BYTE; },
      peg$c147 = peg$otherExpectation("SIGNED WORD Keyword"),
      peg$c148 = function() { return S_WORD; },
      peg$c149 = peg$otherExpectation("CHAR Keyword"),
      peg$c150 = "char",
      peg$c151 = peg$literalExpectation("char", true),
      peg$c152 = peg$otherExpectation("Type"),
      peg$c153 = /^[^\n\r]/,
      peg$c154 = peg$classExpectation(["\n", "\r"], true, false),
      peg$c155 = /^[\n\r]/,
      peg$c156 = peg$classExpectation(["\n", "\r"], false, false),
      peg$c157 = peg$otherExpectation("Declaration"),
      peg$c158 = function(type, id) { return defineVariable(id, type); },
      peg$c159 = function(type, id, loc) { return defineVariable(id, type, 0, loc); },
      peg$c160 = function(type, id, expr) { return defineVariable(id, type, expr); },
      peg$c161 = function(type, id, loc, expr) { return defineVariable(id, type, expr, loc); },
      peg$c162 = peg$otherExpectation("Assignment"),
      peg$c163 = function(id, expr) {
            return {
                code: [...pushValue(expr).code,
                       `LDI AL, bank(&${id})`,
                       `MOV DB, AL`,
                       `POP A`,
                       `STD A, [addr(&${id})]`,
                      ]
            };
        },
      peg$c164 = peg$otherExpectation("Constant Expression"),
      peg$c165 = function(head, tail) {
             return tail.reduce(function(result, element) {
              if (element[1] === "+") {
                  return result + element[3];
              }
              if (element[1] === "-") {
                  return result - element[3];
              }
            }, head);
        },
      peg$c166 = peg$otherExpectation("Constant Term"),
      peg$c167 = function(head, tail) {
             return tail.reduce(function(result, element) {
              if (element[1] === "*") {
                  return result * element[3];
              }
              if (element[1] === "/") {
                  return result / element[3];
               }
            }, head);
        },
      peg$c168 = peg$otherExpectation("Constant Factor"),
      peg$c169 = function(expr) { return expr; },
      peg$c170 = function(head, tail) {
             return tail.reduce(function(result, element) {
              if (element[1] === "+") {
                  return {
                  	code: [
                      	...pushValue(result).code,
                          ...pushValue(element[3]).code,
                          `POP B`,
                          `POP A`,
                          `ADD A, B            ; A = A + B`,
                      ]
                  };
              }
              if (element[1] === "-") {
              }
            }, head);
          },
      peg$c171 = function(head, tail) {
             return tail.reduce(function(result, element) {
              if (element[1] === "*") {
              }
              if (element[1] === "/") {
               }
            }, head);
          },
      peg$c172 = peg$otherExpectation("identifier"),
      peg$c173 = function() {
          return text().trim();
        },
      peg$c174 = peg$otherExpectation("Start of Identifier"),
      peg$c175 = /^[A-Za-z_]/,
      peg$c176 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false),
      peg$c177 = peg$otherExpectation("Identifier Character"),
      peg$c178 = /^[A-Za-z0-9_]/,
      peg$c179 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false),
      peg$c180 = peg$otherExpectation("integer"),
      peg$c181 = /^[0-9]/,
      peg$c182 = peg$classExpectation([["0", "9"]], false, false),
      peg$c183 = function() {
            return Number(text().trim());
        },
      peg$c184 = peg$otherExpectation("Hexadecimal Literal"),
      peg$c185 = "0x",
      peg$c186 = peg$literalExpectation("0x", false),
      peg$c187 = function(hex) {
            return Number(`0x${hex.join("")}`);
        },
      peg$c188 = peg$otherExpectation("Binary Literal"),
      peg$c189 = "0b",
      peg$c190 = peg$literalExpectation("0b", false),
      peg$c191 = function(binary) {
            return Number(`0b${binary.join("")}`);
        },
      peg$c192 = peg$otherExpectation("Binary Digit"),
      peg$c193 = /^[0|1]/,
      peg$c194 = peg$classExpectation(["0", "|", "1"], false, false),
      peg$c195 = peg$otherExpectation("Hexadecimal Digit"),
      peg$c196 = /^[0-9A-Fa-f]/,
      peg$c197 = peg$classExpectation([["0", "9"], ["A", "F"], ["a", "f"]], false, false),
      peg$c198 = peg$otherExpectation("whitespace"),
      peg$c199 = /^[ \t\n\r]/,
      peg$c200 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c201 = peg$otherExpectation("End of Statement"),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseProgram() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseStatement();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseStatement();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseCOMMENT() {
    var s0, s1;

    peg$silentFails++;
    if (input.charCodeAt(peg$currPos) === 35) {
      s0 = peg$c2;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    return s0;
  }

  function peg$parseCOMMA() {
    var s0, s1;

    peg$silentFails++;
    if (input.charCodeAt(peg$currPos) === 44) {
      s0 = peg$c5;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }

    return s0;
  }

  function peg$parseCOLON() {
    var s0, s1;

    peg$silentFails++;
    if (input.charCodeAt(peg$currPos) === 58) {
      s0 = peg$c8;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }

    return s0;
  }

  function peg$parseSEMICOLON() {
    var s0, s1;
